# cmd/api/healthcheck.go
@@ -4,14 +4,20 @@ import (
 	"net/http"
 
 	"github.com/labstack/echo/v4"
+	"greenlight.aeropagz.de/internal/data"
 )
 
+// @Summary     Show server status
+// @Tags		Status
+// @Accept 		json
+// @Produce 	json
+// @Success		200 {object} data.Healthcheck
+// @Router	/v1/healthcheck [get]
 func (app *application) healthcheckHandler(c echo.Context) error {
-	data := map[string]string{
-		"status": "available",
-		"enviroment": app.config.env,
-		"version": version,
-	}
-	
+	data := &data.Healthcheck{
+		Status: "up",
+		Enviroment: "development",
+		Version: version,
+	}	
 	return c.JSON(http.StatusOK, data)
 }
